# lms

./: .flaskenv  .gitignore  LICENSE  app.py  mypy.ini  pyproject.toml  run.ps1
book/: models.py  routes.py
lms/: app.py
lms/book/: routes.py
lms/static/css/: styles.css
lms/templates/: book_details.html  books.html  update_book.html
lms/templates/includes/: navbar.html
static/: style.css
static/css/: styles.css
static/js/: scripts.js
templates/: _book_form.html  _borrow_history.html  _footer.html  _navbar.html  add_book.html  base.html  book_details.html  books.html  dashboard.html  home.html  index.html  update_book.html
templates/includes/: book_details_form.html  book_form.html  borrow_history.html
user/: models.py  routes.py
