[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Kadir Burak Gündüz <73403802+kb1337@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.2.0"
Flask = "^2.1.3"
passlib = "^1.7.4"
python-dotenv = "^0.20.0"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = "True"
disallow_subclassing_any = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
pretty = "True"
show_error_context = "True"
show_error_codes = "True"
strict_equality = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
ignore_missing_imports = "True"
ignore_missing_imports_per_module = "True"
